# sinavir

./: .gitignore  README.md
.provisioning/: commit-msg  update_templates.py
.provisioning/templates/python/: README.md  default.nix  pyproject.toml  shell.nix
.provisioning/templates/python/npins/: sources.json
colmena-anywhere/: README.md  colmena-anywhere.sh
config/: default.nix  hive.nix  meta.nix  update.sh
config/modules/: borgmatic.nix  tailscale.nix
config/npins/: sources.json
config/patches/: 280707.patch  280764.patch  2cb817fa4c5a3087e9a8722f6317c34f27f34002-reverted.patch  default.nix  python-social-core.patch  tandoor-update.nix
config/pkgs/: arkheon-backend.nix  arkheon-frontend.nix  arkheon.patch  overlays.nix
config/shared/: default.nix  git-config.nix  minimal-shared.nix  programs.nix  sinavir.fr.zone  syncthing.nix
djangonix/: TODO.md  module.nix
djangonix/utils/: mkEnvFile.nix  mkManagePy.nix  mkStaticAssets.nix
eduroam-networkmanager-config/: eduroam.nmc
josh-nix/: default.nix  josh.nix  module.nix  test.nix  update-tests.patch
josh-nix/npins/: sources.json
lychee-nix/: composer-builder.patch  default.nix  lychee.nix  module.nix
lychee-nix/npins/: sources.json
nixexpr/: .gitignore  bootboot.nix  default.nix  eggnoggplus.nix  pyzo.nix  qlcplus.nix  x32edit.nix
nixexpr/castopod/: castopod.nix  default.nix
nixexpr/josh/: .gitignore  LICENSE  README.md  default.nix  josh.nix
nixexpr/kitchenowl/: dbscan1d.nix  default.nix  flask-apscheduler.nix  flask-basicauth.nix  ingredient-parser-nlp.nix  kitchenowl.nix  mlxtend.nix  mlxtend.patch  module.nix  oic.nix  overlay.nix  pydantic-core.nix  pydantic-settings.nix  pydantic.nix  sqlite-icu.nix
nixexpr/labOne/: README.md  default.nix  labOne.nix  overlay.nix  shell.nix  zhinst-core.nix  zhinst-meta.nix  zhinst-toolkit.nix  zhinst-utils.nix
nixexpr/nerd-dict/: default.nix  kaldi.nix  nerd-dict.nix  overlay.nix  (+2 more)
nixexpr/zi2/: default.nix  gwyfile.nix  pyproject.toml  setup.py  zhinst-core.nix  zhinst-toolkit.nix  zhinst-utils.nix  zi2.nix
nixexpr/zi2/npins/: sources.json
pyjecteur/: .gitignore  README.md  default.nix  pyjecteur.nix  setup.py  shell.nix
ragb/: .gitignore  shell.nix
ragbv2/: .gitignore  patch.json
ragbv2/backend/: Cargo.toml  data.json
ragbv2/backend/src/: authorization.rs  handler.rs  main.rs  model.rs  route.rs
ragbv2/ragb-backend/: Cargo.toml  README.md  auth_curl.sh
ragbv2/ragb-backend/src/: authorization.rs  handler.rs  main.rs  model.rs  route.rs
rapport_stage_cesure/: .gitignore  bib.bib  main.tex  makefile
resume/: resume.typ  shell.nix  template.typ
(+203 files in other folders)
